--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <audio src="./assets/Aytaç Doğan - Akşam Güneşi Live Official Video.mp3"></audio>
+    <audio controls src="./assets/Aytaç Doğan - Akşam Güneşi Live Official Video.mp3"></audio>
     <div class="container">
       <div class="sun"></div>
       <div class="earth">
