--- a/index.html
+++ b/index.html
@@ -7,13 +7,22 @@
     <title>Solar System</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+  <div class="left">
+
+      <p>Müzik eşliğinde oynatmak için play tuşuna basın!</p>
+      <audio
+        controls
+        src="./assets/s-o-n-s-u-z-l-u-k-bilim-kurgu-fon-muzigi.mp3"
+      ></audio>
+  </div>
   <body>
-    <audio controls src="./assets/Aytaç Doğan - Akşam Güneşi Live Official Video.mp3"></audio>
     <div class="container">
       <div class="sun"></div>
       <div class="earth">
         <div class="moon"></div>
       </div>
     </div>
+
+    
   </body>
 </html>
